--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<link rel="shortcut icon"  href="image/icon.png">
 </head>
 <body>
-	<div id="lang">
-		<a href="index.html"><img src="image/vn.png"></a>
-		<a href="index-en.html"><img src="image/uk.png"></a>
-	</div>
+	<!-- <div id="lang"> -->
+		<!-- <a href="index.html"><img src="image/vn.png"></a> -->
+		<!-- <a href="index-en.html"><img src="image/uk.png"></a> -->
+	<!-- </div> -->
 	<p style="font-weight: bold; font-size: 30px; color: #3bfffa; text-align: center;"><i class="fas fa-dragon"></i>   Chạm nhau 1s thôi là nhớ nhau cả đời</p>
 	<div id="topb"> </div>
 	<div id="top">
