--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					</div>
 					<div id="rowr">
 						<div id="td">Momo</div>
-						<div id="nd">Link chuyển tiền đây nè!!!</div>
+						<!-- <div id="nd">Link chuyển tiền đây nè!!!</div> -->
 					</div>
 				</div>
 			</div>
