--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- <a href="index.html"><img src="image/vn.png"></a> -->
 		<!-- <a href="index-en.html"><img src="image/uk.png"></a> -->
 	<!-- </div> -->
-	<p style="font-weight: bold; font-size: 30px; color: #3bfffa; text-align: center;"><i class="fas fa-dragon"></i>   Chạm nhau 1s thôi là nhớ nhau cả đời</p>
+	<p style="font-weight: bold; font-size: 20px; color: #ccc; text-align: center; margin-right: 80%;"><i class="fas fa-dragon"></i>  Cardi4</p>
 	<div id="topb"> </div>
 	<div id="top">
 		<div id="topl">
@@ -39,18 +39,6 @@
 					</div>
 				</div>
 			</div>
-		</a>
-		<a href="https://www.facebook.com/messages/t/100005604162351" target="blank">
-			<div id="rowb">
-				<div id="row">
-					<div id="rowl">
-						<img src="image/mess.png">
-					</div>
-					<div id="rowr">
-						<div id="td">Messenger</div>
-					</div>
-				</div>
-			</div>
 		</a>	
 		<a href="https://www.facebook.com/daisylatuii/" target="blank">
 			<div id="rowb">
@@ -72,6 +60,18 @@
 					</div>
 					<div id="rowr">
 						<div id="td">Instagram</div>
+					</div>
+				</div>
+			</div>
+		</a>
+		<a href="https://www.facebook.com/messages/t/100005604162351" target="blank">
+			<div id="rowb">
+				<div id="row">
+					<div id="rowl">
+						<img src="image/mess.png">
+					</div>
+					<div id="rowr">
+						<div id="td">Messenger</div>
 					</div>
 				</div>
 			</div>
