--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- <a href="index.html"><img src="image/vn.png"></a> -->
 		<!-- <a href="index-en.html"><img src="image/uk.png"></a> -->
 	<!-- </div> -->
-	<p style="font-weight: bold; font-size: 20px; color: #ccc; text-align: center; margin-right: 80%;"><i class="fas fa-dragon"></i>  Cardi4</p>
+	<p style="font-weight: bold; font-size: 20px; color: #949494; text-align: center; margin-right: 80%;"><i class="fas fa-dragon"></i>  Cardi4</p>
 	<div id="topb"> </div>
 	<div id="top">
 		<div id="topl">
